tests/A1/tests/reject/reject1.ul
//assigning variable and declaring in same expression

void foo (){
    int x = 2;
}
